--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
+    "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.1"
   },
   "scripts": {
